[package]
name = "rs-blockchain"
version = "0.1.0"
authors = ["nicholas <nicho.tjornelund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
elgamal_ristretto = "0.2.3"
rand = "0.7.0"
rand_core = "0.6.3"
num = "*"
curve25519-dalek-fiat = "0.1.0"

