[package]
name = "rs-blockchain"
version = "0.1.0"
authors = ["nicholas <nicho.tjornelund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
rand = "0.8.4"
rsa = "0.4.0"
sha2 = "0.9.5"
hex = "0.4.3"
